--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<HTML>
 
-Shouts going out.
-
-</HTML>
+		<HTML>
+		<meta http-equiv="refresh" content="1" > 
+		-------------------------------------------------------------------------------<br>Last Block: 7000000000000000000000011156750000<br>Block Size:  1000000<br>Units per Block:  100<br>Remaining Work Units: 63<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;clientID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Units completed: <br>-------------------------------------------------------------------------------<br>e37449ec-8b1b-11e2-a8a3-00e07dd5df94 .......  7<br>e4a8b3d4-8b1b-11e2-99e4-00e07dd5df94 .......  8<br>e4d67fbc-8b1b-11e2-af62-00e07dd5df94 .......  7<br>e51c0dac-8b1b-11e2-8101-00e07dd5df94 .......  7<br>e5f3a1f4-8b1b-11e2-9ec6-00e07dd5df94 .......  8<br>-------------------------------------------------------------------------------<br>                          Total Active Clients:5<br>
+		</HTML>
+		
