worked on server

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 		<HTML>
 		<meta http-equiv="refresh" content="4" > 
-		---------------------------------------------------------------------------------------<br>Last Block: 16300001<br>Block Size:  4000000<br>Units per Block:  100<br>Remaining Work Units: 100/97<br>Time worked on current Block:436.261852026<br>KEITH NUMBERS FOUND:<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;clientID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Units completed: <br>---------------------------------------------------------------------------------------<br>c1d0db2c-f26a-11e3-9ba0-ccd29b2fe4f6 .......  3<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 1<br>
+		---------------------------------------------------------------------------------------<br>Last Block: 7000000000000000000000065320133083<br>Block Size:  100000000<br>Units per Block:  500<br>Numbers per Work Unit:200000<br>Remaining Work Units: 500/5<br>Time worked on current Block:104.585116863<br>Completed numbers:99000000<br>Numbers per second:946597<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 40<br>
 		</HTML>
 		
