added client_rep2 which is the cuda client

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
 		<HTML>
 		<meta http-equiv="refresh" content="4" > 
-		---------------------------------------------------------------------------------------<br>Last Block: 7000000000000000000000065320133083<br>Block Size:  100000000<br>Units per Block:  500<br>Numbers per Work Unit:200000<br>Remaining Work Units: 500/5<br>Time worked on current Block:104.585116863<br>Completed numbers:99000000<br>Numbers per second:946597<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 40<br>
+		---------------------------------------------------------------------------------------<br>Last Block: 3600000000<br>Block Size:  100000000<br>Units per Block:  10<br>Numbers per Work Unit:10000000<br>Remaining Work Units: 10/2<br>Time worked on current Block:15.9243760109<br>Completed numbers:80000000<br>Numbers per second:5023744<br>KEITH NUMBERS FOUND:<br>129572008
+<br>251133297
+<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 1<br>
 		</HTML>
 		
