--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 
 		<HTML>
 		<meta http-equiv="refresh" content="4" > 
-		---------------------------------------------------------------------------------------<br>Last Block: 3600000000<br>Block Size:  100000000<br>Units per Block:  10<br>Numbers per Work Unit:10000000<br>Remaining Work Units: 10/2<br>Time worked on current Block:15.9243760109<br>Completed numbers:80000000<br>Numbers per second:5023744<br>KEITH NUMBERS FOUND:<br>129572008
-<br>251133297
-<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 1<br>
+		---------------------------------------------------------------------------------------<br>Total Numbers Checked:2790000000001<br>two trillion, seven hundred ninety billion, one<br>Last Block: 5752090994058710841673151653731520<br>Block Size:  10000000000<br>Units per Block:  500<br>Numbers per Work Unit:20000000<br>Remaining Work Units: 500/497<br>Time worked on current Block:27.1534230709<br>Completed numbers:60000000<br>Numbers per second:2209666<br>two million, two hundred nine thousand, six hundred sixty six<br>Time Remaining:1 hour, 14 minutes<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 2<br>
 		</HTML>
 		
