updated server code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 		<HTML>
 		<meta http-equiv="refresh" content="4" > 
-		---------------------------------------------------------------------------------------<br>Total Numbers Checked:2790000000001<br>two trillion, seven hundred ninety billion, one<br>Last Block: 5752090994058710841673151653731520<br>Block Size:  10000000000<br>Units per Block:  500<br>Numbers per Work Unit:20000000<br>Remaining Work Units: 500/497<br>Time worked on current Block:27.1534230709<br>Completed numbers:60000000<br>Numbers per second:2209666<br>two million, two hundred nine thousand, six hundred sixty six<br>Time Remaining:1 hour, 14 minutes<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 2<br>
+		---------------------------------------------------------------------------------------<br>Total Numbers Checked:15882100000001<br>fifteen trillion, eight hundred eighty two billion, one hundred million, one<br>Last Block: 5752090994058710841686243753731520<br>Block Size:  40000000000<br>Units per Block:  500<br>Numbers per Work Unit:80000000<br>Remaining Work Units: 500/89<br>Time worked on current Block:2.0 minutes, 16.0 seconds<br>Completed numbers:32880000000<br>Numbers per second:240813208<br>two hundred forty million, eight hundred thirteen thousand, two hundred eight<br>Time Remaining:29 seconds<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 45<br>
 		</HTML>
 		
