--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 		<HTML>
-		<meta http-equiv="refresh" content="4" > 
-		---------------------------------------------------------------------------------------<br>Total Numbers Checked:15882100000001<br>fifteen trillion, eight hundred eighty two billion, one hundred million, one<br>Last Block: 5752090994058710841686243753731520<br>Block Size:  40000000000<br>Units per Block:  500<br>Numbers per Work Unit:80000000<br>Remaining Work Units: 500/89<br>Time worked on current Block:2.0 minutes, 16.0 seconds<br>Completed numbers:32880000000<br>Numbers per second:240813208<br>two hundred forty million, eight hundred thirteen thousand, two hundred eight<br>Time Remaining:29 seconds<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 45<br>
+		<meta http-equiv="refresh" content="5" > 
+		---------------------------------------------------------------------------------------<br>Total Numbers Checked:150200000000<br>one hundred fifty billion, two hundred million,<br>Last Block: 5752090994058710841686393953731520<br>Block Size:  10000000000<br>Units per Block:  500<br>Numbers per Work Unit:20000000<br>Remaining Work Units: 500/277<br>Time worked on current Block:3.0 minutes, 16.0 seconds<br>Total Time worked:4.0 week, 2.0 day<br>Completed numbers:4460000000<br>Numbers per second:22671079<br>twenty two million, six hundred seventy one thousand, seventy nine<br>Time Remaining:4 minutes, 4 seconds<br>KEITH NUMBERS FOUND:<br>---------------------------------------------------------------------------------------<br>Total Active Clients: 5<br>
 		</HTML>
 		
